# rfdetr_trocr_pipeline

./: .gitignore  README.md  image_processing.py  inference_slicer_modified.py  main.py  pyproject.toml  reading_order_graph.py  seg_inference.py  trocr.py  utils.py  xml_koodit.py
